# matrix-trilogy

./: .gitignore  LICENSE  README.md  pyproject.toml
src/matrix_sim/: __init__.py  agents.py  cli.py  engine.py  events.py  movies.py  simulate.py
tests/: test_events_effects.py  test_invariants.py  test_smoke.py  test_themes.py
